# qropenmp-distributed

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml
api/: Dockerfile  app.py  requirements.txt
api/static/: index.html
client/: Dockerfile  submit.py
engine/: CMakeLists.txt
engine/src/: main.cpp  qr.cpp  qr.h
worker/: Dockerfile  requirements.txt  worker.py
